# S3-Pypi-Server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deploy.sh  pyproject.toml  template.yaml
.kiro/specs/s3-pypi-server/: .config.kiro  design.md  requirements.md  tasks.md
docs/: README.md  design.md  faq.md  user-guide.md
s3pypi/: __init__.py  apikey.py  cli.py  config.py  deploy.py  index.py  invalidation.py  packaging.py  pip_config.py  secrets.py  template.yaml  uploader.py
tests/: __init__.py  test_apikey.py  test_cli.py  test_config.py  test_deploy.py  test_index.py  test_invalidation.py  test_packaging.py  test_secrets.py  test_smoke_bandit.py  test_smoke_cfnlint.py  test_smoke_pylint.py  test_smoke_yamllint.py  test_uploader.py
