[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-pypi-server"
version = "0.3.1"
license = "MIT"
authors = [
    { name = "Topaz Bott", email = "topaz@topazhome.net" },
]
description = "Deploy and manage a private PyPI server on AWS using S3, API Gateway, CloudFront, and Lambda. Supports PEP 503 package hosting, twine uploads, LDAP/AD and API key authentication, KMS encryption, and VPC placement — all from a single CLI."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pypi", "aws", "s3", "private", "package", "repository", "cloudformation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "boto3",
    "keyring",
]

[project.urls]
Homepage = "https://github.com/tmb28054/S3-Pypi-Server"
Repository = "https://github.com/tmb28054/S3-Pypi-Server"
Documentation = "https://github.com/tmb28054/S3-Pypi-Server/tree/main/docs"
Changelog = "https://github.com/tmb28054/S3-Pypi-Server/blob/main/CHANGELOG.md"
Issues = "https://github.com/tmb28054/S3-Pypi-Server/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "moto[all]",
    "pylint",
    "bandit",
    "cfn-lint",
    "yamllint",
]

[project.scripts]
s3pypi = "s3pypi.cli:main"

[tool.setuptools.packages.find]
include = ["s3pypi*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
s3pypi = ["template.yaml"]

[tool.pytest.ini_options]
markers = [
    "smoke: fast smoke tests with no external dependencies",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["s3pypi"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.pylint.main]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
]

[tool.bandit]
exclude_dirs = ["tests"]
